Update LaGuardia Project 2.ipynb

--- a/LaGuardia Project 2.ipynb
+++ b/LaGuardia Project 2.ipynb
@@ -5,7 +5,7 @@
    "id": "c2a69126",
    "metadata": {},
    "source": [
-    "## LaGuardia CC Capstone Project 2 - Diabetes\n",
+    "## LaGuardia Project 2 - Diabetes\n",
     "   \n",
     "### In this project, I will be analyzing the diabetes data, more specifically, among African Americans and Hispanics. According to the American Diabetes Association, Hispanic and African American groups are the second and third places with the highest rates of diagnosed diabetes in the county, with 12.1% and 11.7% within their populations, respectively. \n",
     "\n",
